@@ -43,7 +43,7 @@
 .\"
 .\"
 .\" Changes by Gunnar Ritter, Freiburg i. Br., Germany, February 2006.
-.\" Sccsid @(#)doc.tr	1.147 (gritter) 9/11/06
+.\" Sccsid @(#)doc.tr	1.148 (gritter) 9/17/06
 .\"
 .\" from file m.mac
 .do xflag 3
@@ -98,7 +98,7 @@
 .fallback BI BIE
 .flig BI 31
 ..
-.ds Sccsdate 9/11/06
+.ds Sccsdate 9/17/06
 .ds Str \*[Sccsdate]
 .substring Str 0 0
 .if '\*[Str]'%' \{\
@@ -1087,24 +1087,53 @@ The following options are currently supported with \fIdpost:\fR
 	Option	Effect
 .br
 .ft R
-.ta .3i 1.2i
+.ta .3i 1.2i 1.4i
 .in 1.2i
 .ll -.3i
 .bt
 	\fB\-e\ \fIencoding\fR	\
 Set the \*(PS encoding scheme.
-Interesting values of \fIencoding\fR are:
-\fB0\fR using the \*(PS \fBashow\fR operator,
-with the same position representation as previous
-versions of \fIdpost\fR;
-\fB2\fR using the \*(PS \fBwidthshow\fR operator,
-usually resulting in compacter output
-unless the \fBtrack\fR request has been used;
-\fB4\fR using \fBashow\fR,
-storing positions as differences;
-\fB5\fR like 4 but using a binary \*(PS Level\~2 representation.
-The default is to switch automatically between 2 and 4.
-\fB
+Possible values of \fIencoding\fR are:
+.in 1.4i
+.ti 0
+.xx
+		\fB0\fR	using the \*(PS \fBashow\fR operator,
+with the same representation as previous
+versions of \fIdpost\fR
+.ti 0
+		\fB1\fR	using \fBashow\fR,
+integrating motion commands with text commands
+.ti 0
+		\fB2\fR	using the \*(PS \fBawidthshow\fR operator,
+computing space widths in \*(PS
+.ti 0
+		\fB3\fR	using \fBawidthshow\fR,
+computing space widths in \fIdpost\fR
+.ti 0
+		\fB4\fR	using \fBashow\fR,
+storing text positions as differences
+.ti 0
+		\fB5\fR	like \fB4\fR but using a binary
+\*(PS Level\~2 representation
+.in 1.2i
+.ti 0
+.xx
+		The default is \fB4\fR, or \fB0\fR for devices
+with legacy fonts.
+\fB3\fR is often the best choice with the default
+high-resolution \fBps\fR device;
+it usually produces the most efficient \*(PS output
+and leads to the most compact \*[PDF] documents.
+With lower-resolution devices, \fB2\fR is preferred over \fB3\fR
+since the latter may produce incorrect alignment
+because of accumulated rounding errors.
+\fB0\fR, \fB1\fR, or \fB4\fR are recommended
+if the text font contains many kerning pairs
+since \fB2\fR or \fB3\fR may result
+in less efficient and less compact output
+under these circumstances.
+.ta .3i 1.2i
+.in 1.2i
 .bt
 	\fB\-M\ \fImarks\fR	\
 Print marks (in combination with the \T'trimat'\fBtrimat\fR\T \*(TR request).
